--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>logo.webp">
-    <script defer="defer" src="https://um.api.418121.xyz/script.js" data-website-id="14244061-3cb4-4acc-858f-e64211c0f1da"></script>
+    <script defer src="https://um.api.418121.xyz/script.js" data-website-id="14244061-3cb4-4acc-858f-e64211c0f1da"></script>
     <title>叶泯希的图床</title>
   </head>
   <body>
