添加全局样式，更新字体链接和脚本标签属性

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>logo.webp">
-    <script defer src="https://um.api.418121.xyz/script.js" data-website-id="14244061-3cb4-4acc-858f-e64211c0f1da"></script>
+    <link rel="stylesheet" href="https://font.sec.miui.com/font/css?family=MiSans:400,700:MiSans">
+    <script defer src="https://um.api.418121.xyz/script.js" data-website-id="14244061-3cb4-4acc-858f-e64211c0f1da" data-domains="images.418121.xyz"></script>
     <title>叶泯希的图床</title>
   </head>
   <body>
@@ -17,6 +18,10 @@
   </body>
 </html>
 <style>
+/* 全局样式 */
+* {
+    font-family: 'MiSans'!important;
+}
 /* 下拉菜单样式 */
 .el-dropdown__popper.el-popper {
     border-radius: 12px;
